--- a/chp/Tracking.tex
+++ b/chp/Tracking.tex
@@ -286,6 +286,7 @@ This is shown in figure \ref{fig:resalt}.
         \item Should also include the effect on vertex reconstruction.
     \end{itemize}
 }
+\subsection{Reconstruction Efficiency}
 \begin{figure}
     \centering
     \includegraphics[scale=0.5]{fig/tracking/test_eff.png}
@@ -297,4 +298,16 @@ This is shown in figure \ref{fig:resalt}.
     \includegraphics[scale=0.5]{fig/tracking/test_eff3.png}
     \caption{Go figure.}
     \label{fig:eff3}
+\end{figure}
+\subsection{Vertex Reconstruction}
+The effect that the alternative tracking algorithm has on the reconstruction of signal vertices must be understood.
+The primary piece of evidence must come as the invariant mass resolution of the reconstructed vertices and how this parameter changes as 5 hit tracks are introduced.
+The mass of a vertex is described by the sum of the invariant masses of the decay products.
+The mass of this vertex must be consistent with the rest mass of a muon, therefore in the range of $103 MeV < m_{eee} < 110 MeV$ \cite{hesketh2022mu3e}.
+For the given range, the invariant mass distributions of the vertices reconstructed with both tracking algorithms are shown.
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.5]{fig/tracking/mass_cut.jpeg}
+    \caption{Figure showing the invariant mass distributions of the }
+    \label{fig:mass_d}
 \end{figure}
