--- a/chp/ref.bib
+++ b/chp/ref.bib
@@ -285,3 +285,10 @@ title = {{Search for the lepton flavor violating decay $\mu$ + → e + e - e + w
 volume = {18},
 year = {2023}
 }
+@article{hesketh2022mu3e,
+  title={The Mu3e Experiment},
+  author={Hesketh, Gavin and Hughes, Sean and Perrevoort, Ann-Kathrin and Rompotis, Nikolaos},
+  journal={arXiv preprint arXiv:2204.00001},
+  year={2022}
+}
+
